# agent-audit-logger-mcp

./: .cursorrules  .gitignore  .mcp.json  README.md  SECURITY.md  acp.json  actor.json  apify-actor.json  glama.json  llms.txt  microsoft_governance_integration.py  pyproject.toml  server.json  server.py  smithery.yaml
.github/workflows/: pypi-publish.yml
.well-known/: agent-card.json  agent.json  mcp-server  mcp-server-card.json
.well-known/mcp/: server-card.json
tests/: test_server.py
